# 06-crm

./: .gitignore  .tokeignore  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs  mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs
notification/: Cargo.toml  build.rs
notification/src/: config.rs  lib.rs  main.rs
notification/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
notification/src/pb/: mod.rs  notification.rs
notification/tests/: service.rs
protos/crm/: crm.proto  message.proto  rpc.proto
protos/metadata/: message.proto  rpc.proto
protos/notification/: message.proto  rpc.proto
protos/user-stats/: message.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs
user-stat/examples/: gen.rs
user-stat/fixtures/: test.sql
user-stat/migrations/: 20241117041352_init.sql  20241117111640_add_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs  user_stats.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
