[workspace]
members = ["crm", "crm-metadata", "notification", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
tonic = "0.12.3"
tonic-build = "0.12.3"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
serde_yaml = "0.9.34"
rand = "0.8.5"
crm = { path = "crm" }
crm-metadata = { path = "crm-metadata" }
notification = { path = "notification" }
user-stat = { path = "user-stat" }
tokio-stream = "0.1.16"
