[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
derive_builder = { workspace = true }
crm-metadata = { workspace = true }
notification = { workspace = true }
user-stat = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }
