[package]
name = "notification"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test_utils = ["fake"]

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
chrono = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
derive_builder = { workspace = true }
serde_yaml = { workspace = true }
itertools = "0.13.0"
futures = "0.3.31"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.11.0", features = ["v4"] }
fake = { version = "3.0.1", features = ["derive", "chrono"], optional = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
nanoid = "0.4.0"
notification = { workspace = true, features = ["test_utils"] }
