[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
chrono = { workspace = true }
serde = { workspace = true }
rand = "0.8.5"
nanoid = "0.4.0"
derive_builder = { workspace = true }
serde_yaml = { workspace = true }
itertools = "0.13.0"
futures = "0.3.31"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
sqlx-db-tester = {version = "0.5.0", optional = true }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "3.0.1", features = ["derive", "chrono"] }
user-stat = { workspace = true, features = ["test_utils"] }
